<resources>
    <string name="app_name">Walimai</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scanner_en">Scanner</string>
    <string name="qr_code_en">QR-code</string>
    <string name="barcode_en">Barcode</string>
    <string name="contents_en">Contents :</string>
    <string name="format_en">Format :</string>


    <string name="location">Your location</string>
    <string name="scanner_ru">Сканер</string>
    <string name="qr_code_ru">QR-код</string>
    <string name="barcode_ru">Штрих код</string>
    <string name="contents_ru">Содержание :</string>
    <string name="format_ru">Формат :</string>

    <string name="back">Back</string>
    <string name="Information">Information</string>
    <string name="title_activity_main_activity2">Information</string>
    <string name="btn_result">Result</string>

    //json
    <string name="_id">Id</string>

    <string name="title">Title</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="brand">Brand</string>
    <string name="item_code">Item code</string>
    <string name="scanned_count">Scanned Count</string>
    <string name="unique_id">Unique ID</string>
    <string name="counter">Counter</string>
    <string name="status">Status</string>
    <string name="link">Link</string>

</resources>
